objects/Partner_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the related Account of the Partner Contact.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Contact Records (Account)</relationshipLabel>
        <relationshipName>Partner_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>Stores the address of the Partner Contact</description>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCO_Id__c</fullName>
        <description>Open external Cisco id populated through CCW integration</description>
        <label>CCO Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City information about the Partner Contact</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Stores the Country information about Partner Contact</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Stores the Email of Partner Contact</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the Account object for storing the Partner Name</description>
        <label>Partner Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Contact Records (Partner Name)</relationshipLabel>
        <relationshipName>Partner_Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Stores the phone information of the Partner Contact</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Stores the title of the Partner Contact</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pdb_cn_id__c</fullName>
        <description>Partner database id coming from CCW</description>
        <label>pdb cn id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>This object stores the information about the Partner Contacts related to Quotes.</description>
    <label>Partner Contact Record</label>
    <nameField>
        <label>Partner Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Contact Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>